2008-04-11  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: better handling of papers
	* THANKS: removed deprecated Nexusware support
	* doc/manual/install.texi: removed deprecated Nexusware support
	* doc/manual/texi/install.texi: removed deprecated Nexusware support
	* scripts/texi/compat.texi: removed deprecated Nexusware support
	* scripts/texi/funding.texi: removed deprecated Nexusware support
	* scripts/texi/install.texi: removed deprecated Nexusware support

2008-04-10  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/sth.c: possible correction for bug 017
	* doc/manual/bugs.texi: update bugs
	* Makefile.am: distribute local SNMP headers
	* doc/manual/Makefile.am: distribute agpl.texi
	* streams.spec.in: removed deprecated Nexusware support
	* debian/rules.in: removed deprecated Nexusware support
	* Makefile.am: remove deprecated Nexusware support
	* doc/manual/install.texi: remove deprecated Nexusware support
	* doc/manual/texi/install.texi: remove deprecated Nexusware support
	* scripts/texi/compat.texi: remove deprecated Nexusware support
	* scripts/texi/install.texi: remove deprecated Nexusware support
	* AUTHORS: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2008-01-13  Brian Bidulock  <bidulock@openss7.org>

	* am/snmp.am: added SNMP automake fragment for installing agents
	* src/util/sysconfig/snmp: added SNMP deamon configuration file

	* Makefile.am: added SNMP agent dlmod build and MIB installation
	* am/man.am: substitute snmp directories
	* lib32/Makefile.am: stubs for building 32-bit SNMP dlmods
	* m4/snmp.m4: subsitute dlmod and mib directories
	* src/kernel/strsched.c: correct kthread stop (don't kthread_bind())
	* src/snmp/mib2c.openss7.conf: support for dlmod and agent build from same file
	* src/snmp/strMIB.c: support for dlmod and agent build from same file