@@ -1,7 +1,7 @@
 ## vim: ft=automake comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: openss7.am,v $ $Name: OpenSS7-0_9_2 $($Revision: 0.9.2.122 $) $Date: 2008-04-10 23:17:45 $
+# @(#) $RCSfile: openss7.am,v $ $Name:  $($Revision: 0.9.2.123 $) $Date: 2008-04-12 02:44:24 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2008-04-10 23:17:45 $ by $Author: brian $
+## Last Modified $Date: 2008-04-12 02:44:24 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -120,6 +120,8 @@ EXTRA_TEX		=
 ##
 MY_SUFFIXES		=
 MY_PHONY		=
+MY_INTERMEDIATE		=
+MY_SECONDARY		=
 
 dist_noinst_SCRIPTS	=
 
@@ -670,10 +672,15 @@ SUFFIXES = $(MY_SUFFIXES)
 # Collected phonys from other automake fragments to avoid problems with automake conditionals.
 ##
 .PHONY: $(MY_PHONY)
+.INTERMEDIATE: $(MY_INTERMEDIATE)
+.SECONDARY: $(MY_SECONDARY)
 
 ## =============================================================================
 ##
 ## $Log: openss7.am,v $
+## Revision 0.9.2.123  2008-04-12 02:44:24  brian
+## - better paper compiling
+##
 ## Revision 0.9.2.122  2008-04-10 23:17:45  brian
 ## - BUILT_SOURCES accumulates
 ##
