@@ -1,7 +1,7 @@
 ## vim: ft=automake comments=b\:#,b\:##,b\:#\! formatoptions+=tcqlor
 ## =============================================================================
 ## 
-# @(#) $RCSfile: papers.am,v $ $Name: OpenSS7-0_9_2 $($Revision: 0.9.2.3 $) $Date: 2008-04-11 20:09:58 $
+# @(#) $RCSfile: papers.am,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2008-04-12 02:44:24 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -47,7 +47,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2008-04-11 20:09:58 $ by $Author: brian $
+## Last Modified $Date: 2008-04-12 02:44:24 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -179,6 +179,8 @@ PLOT_PNGS = $(PLOT_PLOTS:%.plot=%.png)
 PLOT_GIFS = $(PLOT_PLOTS:%.plot=%.gif)
 PLOT_JPGS = $(PLOT_PLOTS:%.plot=%.jpg)
 
+MY_INTERMEDIATE	+= $(PLOT_FIGS) $(PLOT_PSS) $(PLOT_PDFS) $(PLOT_GIFS) $(PLOT_JPGS)
+
 $(PLOT_FIGS) : %.fig : %.plot ; $(GNUPLOT) $<
 
 $(PLOT_PLOTS): plots-am
@@ -190,7 +192,7 @@ FIG_PNGS = $(FIG_FIGS:%.fig=%.png)
 FIG_GIFS = $(FIG_FIGS:%.fig=%.gif)
 FIG_JPGS = $(FIG_FIGS:%.fig=%.jpg)
 
-.INTERMEDIATE: $(PLOT_GIFS) $(FIG_GIFS)
+MY_INTERMEDIATE	+= $(FIG_PSS) $(FIG_EPSS) $(FIG_PDFS) $(FIG_GIFS) $(FIG_JPGS)
 
 $(FIG_PSS)  $(PLOT_PSS) : %.ps  : %.fig ; $(FIG2DEV) -L  ps -p dummy -e -g '#ffffff' -b 0 $< $@
 $(FIG_EPSS) $(PLOT_EPSS): %.eps : %.fig ; $(FIG2DEV) -L eps -p dummy -e -g '#ffffff' -b 0 $< $@
@@ -221,6 +223,8 @@ PNG_EPSS = $(PNG_PNGS:$.png=%.eps)
 PNG_PDFS = $(PNG_PNGS:$.png=%.pdf)
 PNG_JPGS = $(PNG_PNGS:$.png=%.jpg)
 
+MY_INTERMEDIATE	+= $(PNG_PSS) $(PNG_EPSS) $(PNG_PDFS) $(PNG_JPGS)
+
 $(PNG_PSS) : %.ps  : %.png ; $(CONVERT) -density 144 $< $@
 $(PNG_EPSS): %.eps : %.ps  ; $(PS2EPSI) $< $@ || $(CONVERT) $< $@
 $(PNG_PDFS): %.pdf : %.eps ; $(EPSTOPDF) --outfile=$@ $< || $(CONVERT) $< $@
@@ -246,6 +250,8 @@ PS_PDFS = $(PS_PSS:%.ps=%.pdf)
 PS_PNGS = $(PS_PSS:%.ps=%.png)
 PS_JPGS = $(PS_PSS:%.ps=%.jpg)
 
+MY_INTERMEDIATE	+= $(PS_EPSS) $(PS_PDFS) $(PS_JPGS)
+
 $(PS_EPSS): %.eps : %.ps  ; $(PS2EPSI) $< $@ || $(CONVERT) $< $@
 $(PS_PDFS): %.pdf : %.eps ; $(EPSTOPDF) --outfile=$@ $< || $(CONVERT) $< $@
 $(PS_PNGS): %.png : %.eps ; $(CONVERT) -antialias $< $@
@@ -262,14 +268,14 @@ MY_SUFFIXES	+= .fig .eps .pdf .png .jpg .ps
 
 if AMDEP
 ## AMDEP
-$(DVIS)		: %.dvi  : %.tex $(IMG_EPSS) $(BIBTEXS)
-$(PSS)		: %.ps   : %.tex $(IMG_EPSS) $(BIBTEXS)
-$(PDFS)		: %.pdf  : %.tex $(IMG_PDFS) $(BIBTEXS)
-$(HTMLS)	: %.html : %.tex $(IMG_PNGS) $(BIBTEXS) $(CSSS)
+$(DVIS)		: %.dvi  : %.tex $(IMG_EPSS) bibs-am
+$(PSS)		: %.ps   : %.tex $(IMG_EPSS) bibs-am
+$(PDFS)		: %.pdf  : %.tex $(IMG_PDFS) bibs-am
+$(HTMLS)	: %.html : %.tex $(IMG_PNGS) bibs-am csss-am
 ## AMDEP
 else
 ## !AMDEP
-.SECONDARY: $(IMG_EPSS) $(IMG_PDFS) $(IMG_PNGS) $(IMG_JPGS)
+MY_SECONDARY	+= $(IMG_EPSS) $(IMG_PDFS) $(IMG_PNGS) $(IMG_JPGS)
 
 $(DVIS)		: %.dvi  : %.tex $(IMG_EPSS)
 $(PSS)		: %.ps   : %.tex $(IMG_EPSS)
@@ -330,8 +336,8 @@ clean-plots:
 	@$(ECHO) "Making $@ in `pwd`"
 	@list='$(PLOT_PLOTS)'; for f in $$list; do \
 		d=`$(ECHO) $$f | sed -e 's,\.plot,,'`; \
-		$(ECHO) "rm -f -- '$$d.fig' '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.png' '$$d.jpg'"; \
-		rm -f -- "$$d.fig" "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.png" "$$d.jpg"; \
+		$(ECHO) "rm -f -- '$$d.fig' '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.gif' '$$d.png' '$$d.jpg'"; \
+		rm -f -- "$$d.fig" "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.gif" "$$d.png" "$$d.jpg"; \
 		b=`$(ECHO) $$f | sed -e 's,.*/,,'`; \
 		if test ! $$b -ef $(srcdir)/$$b; then \
 			$(ECHO) "rm -f -- '$$b'"; \
@@ -343,8 +349,8 @@ clean-figs:
 	@$(ECHO) "Making $@ in `pwd`"
 	@list='$(FIG_FIGS)'; for f in $$list; do \
 		d=`$(ECHO) $$f | sed -e 's,\.fig,,'`; \
-		$(ECHO) "rm -f -- '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.png' '$$d.jpg'"; \
-		rm -f -- "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.png" "$$d.jpg"; \
+		$(ECHO) "rm -f -- '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.gif' '$$d.png' '$$d.jpg'"; \
+		rm -f -- "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.gif" "$$d.png" "$$d.jpg"; \
 		b=`$(ECHO) $$f | sed -e 's,.*/,,'`; \
 		if test ! $$b -ef $(srcdir)/$$b; then \
 			$(ECHO) "rm -f -- '$$b'"; \
@@ -356,8 +362,8 @@ clean-pngs:
 	@$(ECHO) "Making $@ in `pwd`"
 	@list='$(PNG_PNGS)'; for f in $$list; do \
 		d=`$(ECHO) $$f | sed -e 's,\.fig,,'`; \
-		$(ECHO) "rm -f -- '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.jpg'"; \
-		rm -f -- "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.jpg"; \
+		$(ECHO) "rm -f -- '$$d.ps' '$$d.eps' '$$d.pdf' '$$d.gif' '$$d.jpg'"; \
+		rm -f -- "$$d.ps" "$$d.eps" "$$d.pdf" "$$d.gif" "$$d.jpg"; \
 		b=`$(ECHO) $$f | sed -e 's,.*/,,'`; \
 		if test ! $$b -ef $(srcdir)/$$b; then \
 			$(ECHO) "rm -f -- '$$b'"; \
@@ -369,8 +375,8 @@ clean-pss:
 	@$(ECHO) "Making $@ in `pwd`"
 	@list='$(PS_PSS)'; for f in $$list; do \
 		d=`$(ECHO) $$f | sed -e 's,\.fig,,'`; \
-		$(ECHO) "rm -f -- '$$d.eps' '$$d.pdf' '$$d.png' '$$d.jpg'"; \
-		rm -f -- "$$d.eps" "$$d.pdf" "$$d.png" "$$d.jpg"; \
+		$(ECHO) "rm -f -- '$$d.eps' '$$d.pdf' '$$d.gif' '$$d.png' '$$d.jpg'"; \
+		rm -f -- "$$d.eps" "$$d.pdf" "$$d.gif" "$$d.png" "$$d.jpg"; \
 		b=`$(ECHO) $$f | sed -e 's,.*/,,'`; \
 		if test ! $$b -ef $(srcdir)/$$b; then \
 			$(ECHO) "rm -f -- '$$b'"; \
@@ -612,6 +618,9 @@ endif
 ## =============================================================================
 ##
 ## $Log: papers.am,v $
+## Revision 0.9.2.4  2008-04-12 02:44:24  brian
+## - better paper compiling
+##
 ## Revision 0.9.2.3  2008-04-11 20:09:58  brian
 ## - extra files to clean
 ##
